--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=VhzIsGgAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : ""
+  orcid            : "https://orcid.org/0000-0003-2643-773X"
   semantic         : # URL
   pubmed           : ""
   researchgate     : # URL
