--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Orsolya Kiss"
   pronouns         : # example: "she/her"  
-  bio              : "I am a research scientist at SRI International, working on sleep research and sleep-related disorders."
+  bio              : "Center for Health Sciences, SRI International"
   location         : "Menlo Park, CA"
   employer         : "SRI International"
   uri              : # URL
@@ -206,7 +206,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  reserach:
     output: true
     permalink: /:collection/:path/
   talks:
@@ -255,7 +255,7 @@ defaults:
   # _portfolio
   - scope:
       path: ""
-      type: portfolio
+      type: research
     values:
       layout: single
       author_profile: true
