--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Selected Publications"
     url: /publications/
 
   - title: "Talks"
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Research"
+    url: /research/
         
   - title: "Blog Posts"
     url: /year-archive/
