--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,23 @@
 # main links links
 main:
+
+  - title: "Research"
+    url: /research/
+  
   - title: "Selected Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Research"
-    url: /research/
+    url: /teaching/ 
+
+  #- title: "Talks"
+  #  url: /talks/    
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  #- title: "Blog Posts"
+  #  url: /year-archive/
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  #- title: "Guide"
+  #  url: /markdown/
