--- a/_data/coverage.yml
+++ b/_data/coverage.yml
@@ -1,17 +1,19 @@
-- title: "Innovator Spotlight: [Your Name]"
-  summary: "A detailed feature on [Your Name]'s groundbreaking project..."
-  url: "/media/innovator-spotlight"
-  source: "Tech Daily"
-  date: "2024-08-01"
+- title: "Impact of social media usage on sleep patterns in adolescents"
+  summary: "Dr. Kiss stated, “Our findings suggest that poor sleep and high social media engagement could potentially alter neural reward sensitivity in adolescents..."
+  url: "https://www.techexplorist.com/social-media-impact-sleep-duration/84337/"
+  source: "Tech Explorist"
+  date: "2024-05-31"
 
-- title: "Award Winning Work by [Your Name]"
-  summary: "[Your Name] receives accolades for their latest achievements..."
-  url: "/media/award-winning-work"
-  source: "Industry Insights"
-  date: "2024-07-15"
 
-- title: "Interview with [Your Name]"
-  summary: "An in-depth interview covering recent projects and future plans..."
-  url: "/media/interview"
-  source: "Innovate Magazine"
-  date: "2024-06-30"
+- title: "The Pros and Cons of Adolescent Screen Use"
+  summary: "This webinar features presentations by Drs. Jason Nagata, Orsolya Kiss, and Bader Chaarani who share recent findings on the links between screen use and health and behavior in the ABCD Study® cohort."
+  url: "https://nida.nih.gov/news-events/meetings-events/2023/05/pros-cons-adolescent-screen-use-findings-abcd-studyr"
+  source: "NIDA"
+  date: "2023-05-04"
+
+
+- title: "Interview with Orsolya Kiss"
+  summary: "Children spending more time on screens, going to bed later during pandemic"
+  url: "/https://www.sleepmeeting.org/children-spending-more-time-on-screens-going-to-bed-later-during-pandemic/"
+  source: "Sleep 2024"
+  date: "2023-06-3"
