--- a/_data/coverage.yml
+++ b/_data/coverage.yml
@@ -34,3 +34,9 @@
   url: "https://www.nih.gov/news-events/news-releases/social-connectedness-sleep-physical-activity-associated-better-mental-health-among-youth-during-covid-19-pandemic"
   source: "National Institutes of Health (NIH)"
   date: "2022-01-24"
+
+- title: "Study shows significant changes in sleep timing and screen use among children during the pandemic"
+  summary: "Early adolescents spent more time on screens and had later bedtimes during the first year of the COVID-19 pandemic."
+  url: "https://www.news-medical.net/news/20220603/Study-shows-significant-changes-in-sleep-timing-and-screen-use-among-children-during-the-pandemic.aspx"
+  source: "News Medical"
+  date: "2022-06-03"
